--- a/stile.css
+++ b/stile.css
@@ -526,6 +526,7 @@ body {
 }
 
 @media (max-width: 768px) {
+    .container {
         flex-direction: column;
         align-items: center;
         justify-content: center;
